--- a/Sally_Sales_Chrome/manifest.json
+++ b/Sally_Sales_Chrome/manifest.json
@@ -18,7 +18,8 @@
       "js": [
         "js/jquery-3.3.1.js",
         "js/content.js"
-      ]
+      ],
+      "run_at": "document_end"
     }
   ],
   "browser_action": {
