update after midterm product demo

--- a/Sally_Sales_Chrome/manifest.json
+++ b/Sally_Sales_Chrome/manifest.json
@@ -22,7 +22,7 @@
     }
   ],
   "browser_action": {
-    "default_icon": "img/icon@2x.png"
+    "default_icon": "img/favicon.png"
   },
   "permissions": [
     "tabs",
@@ -37,6 +37,6 @@
     "img/*"
   ],
   "icons":{
-    "128": "img/icon@2x.png"
+    "128": "img/favicon.png"
   }
 }
